recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:5: error: reassignment to val
  	length=length+increment
              ^