recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  while (steps>0){
  	avance(length)
  	gauche(angle)
  	length=length+increment
  	spiral(steps-1,angle,length,increment)
  }
}